# oldlinux-files

./: .gitattributes  bochs-images
Linux-0.01/docs/: INSTALLATION  Linux.dvi  Linux.ps  RELNOTES-0.01
Linux-0.10/docs/: FAQ  INSTALL-0.10  README.images
Linux-0.10/patchs/: build.c.patch
Linux-0.11/INSTALL/: rawrite.c
Linux-0.11/docs/: FAQ-0.11  FAQv.txt  INFO-SHEET-0.11  INSTALL-0.11
Linux-0.11/images/: bootimage-0.11.Z  rootimage-0.11.Z
Linux-0.11/info/: vt102.codes
Linux-0.11/patchs/: buffer.c.Z  lp.tar.Z  scsi.h  termcap.diff
Linux-0.11/ports/: find-3.2-diffs
Linux-0.12/INSTALL/: rawrite.doc
Linux-0.12/docs/: INFO-SHEET-0.12  README-0.12  RELNOTES-0.12  STATUS
Linux-0.12/images/: bootimage-0.12.Z  rootimage-0.12.Z
Linux-0.12/info/: xterm-seqs.ms  xterm-seqs2.txt
Linux-0.12/mail-archive/: linux-activists.92
Linux-0.12/patchs/: ahadrive.tar.Z  color.diff.Z  fcntl.c.diff.Z  fpatch.tar.Z  hd.c.Z  lib.patch  lib.patch.Z  patchboot.c  tet1.c.Z  tetrs6k.c.Z
Linux-0.12/ports/: gawk-diffs  shoelace.patch.1  shoelace.patch.2  shoelace.patch.3  shoelace.tar.Z
Linux-0.95/INSTALL/: clock.tar.Z
Linux-0.95/docs/: CHANGES-0.95a  FAQ-0.95a  INFO-SHEET-04.04.92  INSTALL-0.95a  RELNOTES-0.95  RELNOTES-0.95c+  linux-fs-standard
Linux-0.95/images/: bootimage-0.95  bootimage-0.95a  bootimage-0.95c+
Linux-0.95/patchs/: 0.95c.patch.2  config95a.tar.Z  configc+.tar.Z  linus-95a-patch
Linux-0.96/docs/: CHANGES-0.96  INSTALL-0.96  bash-man.dvi.tar.Z  perl.texinfo.Z
Linux-0.96/images/: bootimage-0.96b  bootimage-0.96c
Linux-0.96/patchs/: extfs-0.96c-patch  mouse.tar  patch-for-extfs-for-inode-bug  patch-for-scsi.c  patch0.96a.pl4-0.96b.Z
Linux-0.97/docs/: CHANGES-0.97-root  project_registry.Z  vilearn.sh.Z
Linux-0.97/images/: rootimage-0.97.1
Linux-0.97/patchs/: kbd.tar.gz-8-aug-93  larix-1.README  larix.diffs-2.Z
Linux-0.98/Yggdrasil-0.98.3/: .bash_history  .bash_profile  .bashrc  .emacs  .profile  .xsession-errors
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/find-3.7/: ChangeLog  Makefile.in  NEWS  README  configure  configure.in
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/find-3.7/find/: Makefile.in  defs.h  find.c  fstype.c  parser.c  pred.c  tree.c  util.c  version.c
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/find-3.7/lib/: Makefile.in  fnmatch.c  getopt.c  getopt1.c  idcache.c  listfile.c  modetype.h  nextelem.c  regex.c  regex.h  strftime.c  strspn.c  strtol.c  wait.h  xstrdup.c
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/find-3.7/locate/: Makefile.in  bigram.c  code.c  locate.c  updatedb.sh
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/find-3.7/man/: Makefile.in  find.1  locate.1  xargs.1
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/find-3.7/xargs/: Makefile.in  xargs.c
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/gdb-4.6/gdb-4.6/glob/: ChangeLog  Makefile.in  configure.in  tilde.c
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/gdb-4.6/gdb-4.6/libiberty/: ChangeLog  Makefile.in  argv.c  basename.c  bcmp.c  bcopy.c  bzero.c  concat.c  configure.in  fdmatch.c  getcwd.c  getopt.c  getopt1.c  getpagesize.c  insque.c  memcmp.c  memcpy.c  memmove.c  memset.c  obstack.c  sigsetmask.c  spaces.c  strchr.c  strerror.c  strrchr.c  strsignal.c  strstr.c  vfork.c  vsprintf.c
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/gdb-4.6/gdb-4.6/libiberty/config/: mh-aix  mh-irix4
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/shellutils-1.7/: ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  config.status  configure  configure.in
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/shellutils-1.7/lib/: Makefile  Makefile.in  getdate.y  getopt.h  getugroups.c  regex.c  regex.h  stripslash.c  strtod.c  strtol.c
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/shellutils-1.7/man/: Makefile  Makefile.in  date.1  expr.1  false.1  id.1  pathchk.1  printf.1  stty.1  su.1  tee.1  true.1  tty.1  uname.1  who.1
Linux-0.98/Yggdrasil-0.98.3/usr/src/usr.bin/shellutils-1.7/src/: Makefile  Makefile.in  groups.sh  id.c  nohup.sh  pathchk.c  stty.c  su.c  system.h  test.c  version.c  who.c
Linux-0.98/docs/: CHANGES-0.97.1  INSTALL-0.97  RELNOTES-0.97  X-Docs-v2.tar  device-list
Linux-0.98/images/: bootimage-0.98.1  rootimage-0.98  (+1 more)
Minix/: README  README.html  READ_ME  ind.html  index.html  minix.html  tutor.asc
Ref-docs/: gas.ps  gcc2.95.3.ps  linux_source_0.11.chm  susv3.tgz
bin-src/: Linus.patch  MAKEDEV-1.2.tar  MicrosoftBusmouse097.tar.Z  NEWEST_IS_0.98.3  READ.ME  README.FIRST  README.beav  acct-1.3.tar.gz.lsm  acct.lsm  admutil-1.4.tar.Z  agrep.README  at-1.1.tar.Z  bash-1.12.tar.Z  binutils.tar.Z  bison.Z  bison.tar.Z  blex.bin.tar.Z  bootmenu.tar.Z  bootsy4a.tgz  bootsys.taz  bootsys3.taz  bootsys4.README  buffer.c  busmouse2a.tar.Z  cdiffs for 0.95a  cdrom-0.6a.tar.Z  crt0.s.Z  csh-src.tar.Z  devices-entry-for-linux  diff.Z  diffbin.tar.Z  dual-mon.0.99.13.0.tar.z  dual-mon.09910.tar.z  efsprogs.p9.Z  efsprogs9.bin.tar.Z  efsprogs9.src.tar.Z  efsprogs9.tar.Z  elle.src.tar.Z  emacs-18.57.tar.Z  emacs-18.59a.tar.Z  (+135 more)
bochs/: README_FIRST  README_SECOND  linux-0.11-040323-bash105.rar
docs/: Assembly-HOWTO.htm  CHANGES-0.95a  Dos_Users_To_Linux.guide  INFO-SHEET-01.13.92.txt  INFO-SHEET-01.27.93.txt  INFO-SHEET-02.9.93.txt  INFO-SHEET-04.04.92.txt  INFO-SHEET-12.9.91.txt  INSTALL-0.95a  INSTALL-0.97  IReid - A Beginners Guide to Linux  IReid - gcc+kernel.notes  IReid - kernel.notes  Linux Assembly resources.htm  Linux FAQ Nov 1992.htm  Linux File System Document Revision 1.0  Linuxdocs.doc  META-FAQ-01.27.93  MMURTLV1-cov.doc  OS-Develop0.txt  README-0.95c+.txt  README.txt  RELNOTES-0.95  RELNOTES-0.95a  RELNOTES-0.97  Readme-linux-ftp  Using-GNU-Assembler.htm  WritingOS.doc  bootable floppies.txt  compat.list  crt0.S-HJL.txt  drivers.txt  ext2fs-FAQ.txt  gcc-FAQ.txt  gnudev.ps  linasm.html  lines-0_11.txt  lines-0_12.txt  lines-0_95.txt  linus.txt  (+13 more)
gnu/: README  cvs.README  getting.gnu.software  restoresymtable  standards.text  tasks  texi2roff.~shar
images/: Image-0.11-040327-rh9  README  bootimage-0.12-20040306  rootimage-0.11-20040305  rootimage-0.11-for-orig
(+27853 files in other folders)
