# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=glob.c
srcname="glob library"
configdirs=""

# per-host:

files=sysdep-norm.h
links=sysdep.h

case "${host_os}" in
aix*)
	my_host=aix
	case "${host_cpu}" in
	rs6000)	files=sysdep-aix.h;;
	esac
	;;

irix*)
	files=sysdep-irix.h
	;;

newsos* | mach* | bsd*)
	files=sysdep-obsd.h
	;;

sysv4*)
	my_host=sysv4
	;;

sysv*)
	case "${host_vendor}" in
	sco*) 	files=sysdep-sco.h;;
	apollo*)	files=sysdep-a68v.h
			my_host=apollo68v ;;
	esac
	;;

m88kbcs)
	my_host=delta88
	;;
esac

host_makefile_frag=config/mh-${my_host}

if [ ! -f ${host_makefile_frag} ] ; then
	host_makefile_frag=
fi

# per-target:
