# This file is a shell script fragment that supplies the information
# necessary for a configure script to process the program in
# this directory.  For more information, look at ../configure.

configdirs=
srctrigger=getopt1.c
srcname="-liberty library"

# per-host:

files="alloca-norm.h"
links="alloca-conf.h"

case "${host_os}" in

sysv4 )
	host_makefile_frag=config/mh-sysv4
	;;

sysv* | dgux | irix | m88kbcs )
	host_makefile_frag=config/mh-sysv
	;;

solaris2* )
	host_makefile_frag=config/mh-solaris
	;;

aix*)
	case "${host_cpu}" in
	rs6000)
		host_makefile_frag=config/mh-aix
		files="alloca-botch.h"
		;;
	esac
	;;

irix4)
	host_makefile_frag=config/mh-irix4
	;;

*)
	;;

esac

case "${host_vendor}" in
	apollo*)
		case "${host_cpu}" in
		m68k*)
			case "${host_os}" in
			sysv*) host_makefile_frag=config/mh-apollo68 ;;
			bsd*) host_makefile_frag=config/mh-a68bsd ;;
			esac
			;;
		esac
		;;
	ncr*)
		case "${host_os}" in
			sysv4*)
				host_makefile_frag=config/mh-ncr3000 ;;
			esac
		;;
esac
# per-target:
